clusters/dev/visitlog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitlog
  namespace: visitlog
  labels:
    app: visitlog
    environment: dev
    tier: backend
    managed-by: kustomize
    created-by: kustomize
    version: v1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: visitlog
  template:
    metadata:
      labels:
        app: visitlog
        environment: dev
        tier: backend
        managed-by: kustomize
        created-by: kustomize
        version: v1.0.0
    spec:
      containers:
        - name: visitlog
          image: tinyp/visitlog:v0.5
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1"
