clusters/dev/visitlog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitlog
  namespace: visitlog  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: visitlog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visitlog
                port:
                  number: 80
